--- a/WebRTCAndroidApp/app/src/main/res/values/strings.xml
+++ b/WebRTCAndroidApp/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="act_main_btn_start">Start</string>
     <string name="act_main_subtitle">Session call</string>
     <string name="error_room_name_length">Session call room has to have at least two characters.</string>
+    <string name="session_call_remote_client_left">Remote client has left the call.</string>
 </resources>
